@@ -17,6 +17,7 @@
 
 package org.apache.solr.highlight;
 
+import org.apache.lucene.search.vectorhighlight.BoundaryScanner;
 import org.apache.lucene.search.vectorhighlight.FragmentsBuilder;
 import org.apache.solr.common.params.SolrParams;
 
@@ -24,9 +25,9 @@ public class SimpleFragmentsBuilder extends SolrFragmentsBuilder {
 
   @Override
   protected FragmentsBuilder getFragmentsBuilder( SolrParams params,
-      String[] preTags, String[] postTags ) {
+      String[] preTags, String[] postTags, BoundaryScanner bs ) {
     org.apache.lucene.search.vectorhighlight.SimpleFragmentsBuilder sfb =
-      new org.apache.lucene.search.vectorhighlight.SimpleFragmentsBuilder( preTags, postTags );
+      new org.apache.lucene.search.vectorhighlight.SimpleFragmentsBuilder( preTags, postTags, bs );
     sfb.setMultiValuedSeparator( getMultiValuedSeparatorChar( params ) );
     return sfb;
   }
